@@ -1,6 +1,7 @@
 ubertooth (2015.09.R2-2) unstable; urgency=medium
 
   * Set changelog date to UTC with LC_ALL=C to make man pages reproducible.
+  * Add --mtime to tar command to make tar-ball reproducible.
 
  -- Ruben Undheim <ruben.undheim@gmail.com>  Fri, 19 Feb 2016 17:52:46 +0100
 
